--- a/WebContent/create_account.html
+++ b/WebContent/create_account.html
@@ -3,7 +3,8 @@
 <head>
 <title>Sopraturage</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<meta name="description" content="Sopraturage, organiser le covoiturage des employés" />
+<meta name="description"
+	content="Sopraturage, organiser le covoiturage des employés" />
 <meta name="keywords" content="" />
 
 <link href="css/sopraturage.css" rel="stylesheet" type="text/css" />
@@ -11,35 +12,35 @@
 </head>
 
 <body>
-	
-	<div class="page">	
-		<img src="images/covoit.jpg" width="100%"/>
+
+	<div class="page">
+		<img src="images/covoit.jpg" width="100%" />
 		<div class="titre_page">
 			<h1>Create an account</h1>
 		</div>
-		
-	
-		
+
+
+
 		<form class="formulaire" action="" method="post">
-		<input type="text" name="name" placeholder="Name" /></br>
-		<input type="text" name="surname" placeholder="Surname" /></br>
-		<input type="email" name="email" placeholder="Email" /></br>
-		<input type="tel" name="phoneNumber" placeholder="Phone Number" /></br>
-		<SELECT name="workplace">
-			<OPTION>Toulouse
-			<OPTION>Blagnac
-			<OPTION>Pau
-			<OPTION>Paris
-		</SELECT><br>
-		<input type="text" name="Home" placeholder="Home Adress" /></br>
-		<input type="radio" name="driver" value="yes" checked />I am a driver</br>
-		<input type="radio" name="driver" value="false" />I am not a driver</br>
-		<input type="checkbox" name="notify" value="notify_ok" />I want to be notify<br>
-		<input type="submit" id="submit" name="connexion" value="&rarr;" /></br>
+			<input type="text" name="name" placeholder="Name" /><br /> <input
+				type="text" name="surname" placeholder="Surname" /><br /> <input
+				type="email" name="email" placeholder="Email" /><br /> <input
+				type="tel" name="phoneNumber" placeholder="Phone Number" /><br />
+			<SELECT name="workplace">
+				<option>Toulouse</option>
+				<option>Blagnac</option>
+				<option>Pau</option>
+				<option>Paris</option>
+			</SELECT>
+			<br/> 
+			<input type="text" name="home" placeholder="Home Adress" /> <br />
+			<input type="radio" name="driver" value="yes" /><p>I am a driver</p> <br />
+			<input type="checkbox" name="notify" value="notify_ok" /><p>I want to be notify</p><br /> 
+			<input type="submit" id="submit" name="connexion" value="&rarr;" /><br />
 		</form>
 
 	</div>
-	
+
 </body>
 
 </html>
