--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -3,7 +3,8 @@
 <head>
 <title>Sopraturage</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<meta name="description" content="Sopraturage, organiser le covoiturage des employés" />
+<meta name="description"
+	content="Sopraturage, organiser le covoiturage des employés" />
 <meta name="keywords" content="" />
 
 <link href="css/style.css" rel="stylesheet" type="text/css" />
@@ -11,27 +12,37 @@
 </head>
 <body>
 
-<table id="page-table"><tr><td id="page-td">
-    
+	<table id="page-table">
+		<tr>
+			<td id="page-td">
 
-	
-	<div class="connect_admin">
-	</br>
-	<div class="hublot"><img src="images/auto.png" /><h1>Sopraturage</h1></div>
-	</br>
-	<form class="formulaire" action="" method="post">
-	<input type="text" name="pseudo" placeholder="Pseudo" /></br>
-	<input type="password" name="mot_de_passe" placeholder="Password" /></br>
-	<input type="submit" id="submit" name="connexion" value="&rarr;" /></br>
-	</br>
-	<a href="create_account.html">Create an account</a>
-	<a href="">Forgotten Password</a>
-	</form>
-	
-	</div> 
-	
-	
-</td></tr></table>
+
+
+				<div class="connect_admin">
+					</br>
+					<div class="hublot">
+						<img src="images/auto.png" />
+						<h1>Sopraturage</h1>
+					</div>
+					</br>
+					<form class="formulaire" action="" method="post">
+						<input type="text" name="pseudo" placeholder="Pseudo" />
+						</br>
+						<input type="password" name="mot_de_passe" placeholder="Password" />
+						</br>
+						<input type="submit" id="submit" name="connexion" value="&rarr;" />
+						</br>
+						</br>
+						<a href="create_account.html">Create an account</a>
+						<a href="">Forgotten Password</a>
+					</form>
+
+				</div>
+
+
+			</td>
+		</tr>
+	</table>
 
 
 </body>
