--- a/WebContent/create_account.html
+++ b/WebContent/create_account.html
@@ -21,7 +21,7 @@
 
 
 
-		<form class="formulaire" action="Sopraturage/inscriptionservlet.do" method="post">
+		<form class="formulaire" action="inscriptionservlet.do" method="post">
 			<input type="text" name="name" placeholder="Name" /><br /> <input
 				type="text" name="surname" placeholder="Surname" /><br /> <input
 				type="email" name="email" placeholder="Email" /><br /> <input
