--- a/WebContent/create_account.html
+++ b/WebContent/create_account.html
@@ -21,7 +21,7 @@
 
 
 
-		<form class="formulaire" action="inscriptionservlet.do" method="post">
+		<form class="formulaire" action="" method="post">
 			<input type="text" name="name" placeholder="Name" /><br /> <input
 				type="text" name="surname" placeholder="Surname" /><br /> <input
 				type="email" name="email" placeholder="Email" /><br /> <input
@@ -34,7 +34,7 @@
 			</SELECT>
 			<br/> 
 			<input type="text" name="home" placeholder="Home Adress" /> <br />
-			<input type="radio" name="driver" value="yes" /><p>I am a driver</p> <br />
+			<input type="checkbox" name="driver" value="driver_ok" /><p>I am a driver</p> <br />
 			<input type="checkbox" name="notify" value="notify_ok" /><p>I want to be notify</p><br /> 
 			<input type="submit" id="submit" name="connexion" value="&rarr;" /><br />
 		</form>
