--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -19,20 +19,16 @@
 
 
 				<div class="connect_admin">
-					</br>
+					<br />
 					<div class="hublot">
 						<img src="images/auto.png" />
 						<h1>Sopraturage</h1>
 					</div>
-					</br>
+					<br />
 					<form class="formulaire" action="" method="post">
-						<input type="text" name="pseudo" placeholder="Pseudo" />
-						</br>
-						<input type="password" name="mot_de_passe" placeholder="Password" />
-						</br>
-						<input type="submit" id="submit" name="connexion" value="&rarr;" />
-						</br>
-						</br>
+						<input type="text" name="pseudo" placeholder="Pseudo" /> <br /> 
+						<input type="password" name="mot_de_passe" placeholder="Password" /> <br />
+						<input type="submit" id="submit" name="connexion" value="&rarr;" /> <br /> <br /> 
 						<a href="create_account.html">Create an account</a>
 						<a href="">Forgotten Password</a>
 					</form>
