--- a/WebContent/create_account.html
+++ b/WebContent/create_account.html
@@ -21,11 +21,35 @@
 
 
 		<div class="form_create_account">
+
 		<form class="formulaire" action="inscriptionservlet.do" method="post">
-			<input type="text" name="name" placeholder="Name" /><br /> 
-			<input type="text" name="surname" placeholder="Surname" /><br /> 
-			<input type="email" name="email" placeholder="Email" /><br /> 
-			<input type="tel" name="phoneNumber" placeholder="Phone Number" /><br />
+
+		
+			<p>Personal information : </p>
+			<input type="text" name="name" placeholder="Name" /><br /> <br/>
+			<input type="text" name="surname" placeholder="Surname" /><br /> <br/>
+			<input type="email" name="email" placeholder="Email" /><br /> <br/>
+			<input type="tel" name="phoneNumber" placeholder="Phone Number" /><br /><br/>
+			
+			<br/>
+			<p>Address :</p>
+			<input type="text" name="number" placeholder="Number" /> <br /> <br/>
+			<SELECT name="typeWay">
+				<option>Rue</option>
+				<option>Avenue</option>
+				<option>Chemin</option>
+				<option>Allée</option>
+				<option>Boulevard</option>
+				<option>Route</option>
+				<option>Ruelle</option>
+			</SELECT><br/><br/>
+			<input type="text" name="way" placeholder="Name of the way" /> <br /> <br/>
+			<input type="text" name="postCode" placeholder="PostCode" /> <br /> <br/>
+			<input type="text" name="city" placeholder="City" /> <br /> <br/>
+			
+			
+			<br/>
+			<p>Workplace :</p>
 			<SELECT name="workplace">
 				<option>Toulouse</option>
 				<option>Blagnac</option>
@@ -33,9 +57,12 @@
 				<option>Paris</option>
 			</SELECT>
 			<br/> 
-			<input type="text" name="home" placeholder="Home Adress" /> <br />
-			<input type="checkbox" name="driver" value="driver_ok" /><label for = "driver">I am a driver</label> <br/><br/>
-			<input type="checkbox" name="notify" value="notify_ok" /><label for = "notify">I want to be notify</label><br/> 
+			
+			
+			<br/>
+			<p>More information : </p>
+			<input type="checkbox" name="driver" value="driver_ok" /><label for = "driver">I am a driver</label> <br/>
+			<input type="checkbox" name="notify" value="notify_ok" /><label for = "notify">I want to be notify</label><br/> <br/>
 			<input type="submit" id="submit" name="connexion" value="&rarr;" /><br />
 		</form>
 		</div>
