--- a/WebContent/create_account.html
+++ b/WebContent/create_account.html
@@ -29,7 +29,7 @@
 			<input type="text" name="name" placeholder="Name" /><br /> <br/>
 			<input type="text" name="surname" placeholder="Surname" /><br /> <br/>
 			<input type="email" name="email" placeholder="Email" /><br /> <br/>
-			<input type="tel" name="phoneNumber" placeholder="Phone Number" /><br /><br/>
+			<input type="tel" name="phoneNumber" placeholder="Phone Number" maxlength="10" /><br /><br/>
 			
 			<br/>
 			<p>Address :</p>
@@ -44,7 +44,7 @@
 				<option>Ruelle</option>
 			</SELECT><br/><br/>
 			<input type="text" name="way" placeholder="Name of the way" /> <br /> <br/>
-			<input type="text" name="postCode" placeholder="PostCode" /> <br /> <br/>
+			<input type="text" name="postCode" placeholder="PostCode" maxlength="5" /> <br /> <br/>
 			<input type="text" name="city" placeholder="City" /> <br /> <br/>
 			
 			
