--- a/WebContent/create_account.html
+++ b/WebContent/create_account.html
@@ -44,7 +44,7 @@
 				<option>Ruelle</option>
 			</SELECT><br/><br/>
 			<input type="text" name="way" placeholder="Name of the way" /> <br /> <br/>
-			<input type="text" name="postCode" placeholder="PostCode" maxlength="5" /> <br /> <br/>
+			<input type="number" name="postCode" placeholder="PostCode" min="0" max="99999" /> <br /> <br/>
 			<input type="text" name="city" placeholder="City" /> <br /> <br/>
 			
 			
