--- a/WebContent/create_account.html
+++ b/WebContent/create_account.html
@@ -19,7 +19,14 @@
 			<h1>Create an account</h1>
 		</div>
 
-
+		<script>
+   			document.getElementById('email').willValidate; //true
+    		document.getElementById('phone').willValidate; //true
+    		document.getElementById('postCode').willValidate; //true
+    		document.getElementById('postCode').validity.patternMismatch;
+    		document.getElementById('postCode').validationMessage;
+		</script>
+		
 		<div class="form_create_account">
 
 		<form class="formulaire" action="inscriptionservlet.do" method="post">
@@ -28,8 +35,8 @@
 			<p>Personal information : </p>
 			<input type="text" name="name" placeholder="Name" /><br /> <br/>
 			<input type="text" name="surname" placeholder="Surname" /><br /> <br/>
-			<input type="email" name="email" placeholder="Email" /><br /> <br/>
-			<input type="tel" name="phoneNumber" placeholder="Phone Number" maxlength="10" /><br /><br/>
+			<input type="email" id="email" name="email" placeholder="Email" /><br /> <br/>
+			<input type="tel" id="phone" name="phoneNumber" placeholder="Phone Number" maxlength="10" /><br /><br/>
 			
 			<br/>
 			<p>Address :</p>
@@ -44,7 +51,7 @@
 				<option>Ruelle</option>
 			</SELECT><br/><br/>
 			<input type="text" name="way" placeholder="Name of the way" /> <br /> <br/>
-			<input type="number" name="postCode" placeholder="PostCode" min="0" max="99999" /> <br /> <br/>
+			<input type="number" id="postCode" pattern="[0-9]{5}" name="postCode" placeholder="PostCode" min="0" max="99999" /> <br /> <br/>
 			<input type="text" name="city" placeholder="City" /> <br /> <br/>
 			
 			
