--- a/WebContent/create_account.html
+++ b/WebContent/create_account.html
@@ -24,7 +24,7 @@
 		
 		<div class="form_create_account">
 
-		<form id="form_create_account" class="formulaire" method="post" novalidate>
+		<form id="form_create_account" class="formulaire" action="inscriptionservlet.do" method="post" novalidate>
 
 		
 			<p>Personal information : </p>
