--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -26,7 +26,7 @@
 						<input type="text" name="pseudo" placeholder="Pseudo" /> <br /> 
 						<input type="password" name="mot_de_passe" placeholder="Password" /> <br />
 						<input type="submit" id="submit" name="connexion" value="&rarr;" /> <br /> <br /> 
-						<a href="create_account.html">Create an account</a>
+						<a href="init">Create an account</a>
 						<a href="">Forgotten Password</a>
 					</form>
 
