--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -9,6 +9,9 @@
 
 <link href="css/style.css" rel="stylesheet" type="text/css" />
 
+<head>
+<link rel="icon" href="auto.ico" />
+
 </head>
 <body>
 
