--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -30,7 +30,7 @@
 						<input type="password" name="mot_de_passe" placeholder="Password" /> <br />
 						<input type="submit" id="submit" name="connexion" value="&rarr;" /> <br /> <br /> 
 						<a href="init">Create an account</a>
-						<a href="">Forgotten Password</a>
+						<a href="forgot">Forgotten Password</a>
 					</form>
 
 				</div>
@@ -42,7 +42,7 @@
 
 </body>
 <footer>
-<p>Version 44</p>
+<p>Version 45</p>
 
 </footer>
 
