Connexion fonctionne Inscription fonctionne

--- a/WebContent/create_account.html
+++ b/WebContent/create_account.html
@@ -38,13 +38,13 @@
 			<p>Address :</p>
 			<input type="text" name="number" placeholder="Number" /> <br /> <br/>
 			<SELECT name="typeWay">
-				<option>Rue</option>
-				<option>Avenue</option>
-				<option>Chemin</option>
-				<option>Allée</option>
-				<option>Boulevard</option>
-				<option>Route</option>
-				<option>Ruelle</option>
+				<option>rue</option>
+				<option>avenue</option>
+				<option>chemin</option>
+				<option>allee</option>
+				<option>boulevard</option>
+				<option>route</option>
+				<option>ruelle</option>
 			</SELECT><br/><br/>
 			<input type="text" name="way" placeholder="Name of the way" /> <br /> <br/>
 			<input type="number" id="postCode" name="postCode" placeholder="PostCode" required/> <br />
