--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -25,7 +25,7 @@
 						<h1>Sopraturage</h1>
 					</div>
 					<br />
-					<form class="formulaire" action="" method="post">
+					<form class="formulaire" action="connexion.do" method="post">
 						<input type="text" name="pseudo" placeholder="Pseudo" /> <br /> 
 						<input type="password" name="mot_de_passe" placeholder="Password" /> <br />
 						<input type="submit" id="submit" name="connexion" value="&rarr;" /> <br /> <br /> 
@@ -42,7 +42,7 @@
 
 </body>
 <footer>
-<p>Version 45</p>
+<p>Version 78</p>
 
 </footer>
 
