--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -29,7 +29,7 @@
 						<input type="text" name="pseudo" placeholder="Pseudo" /> <br /> 
 						<input type="password" name="mot_de_passe" placeholder="Password" /> <br />
 						<input type="submit" id="submit" name="connexion" value="&rarr;" /> <br /> <br /> 
-						<a href="init">Create an account</a>
+						<a href="create">Create an account</a>
 						<a href="forgot">Forgotten Password</a>
 					</form>
 
@@ -42,7 +42,7 @@
 
 </body>
 <footer>
-<p>Version 86</p>
+<p>Version 87</p>
 
 </footer>
 
