--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -6,13 +6,8 @@
 <meta name="description"
 	content="Sopraturage, organiser le covoiturage des employés" />
 <meta name="keywords" content="" />
-
 <link href="css/style.css" rel="stylesheet" type="text/css" />
-
-<head>
-<link rel="icon" href="auto.ico" />
-
-</head>
+<link rel="icon" href="images/auto.ico" />
 <body>
 
 	<table id="page-table">
@@ -26,11 +21,11 @@
 					</div>
 					<br />
 					<form class="formulaire" action="connexion" method="post">
-						<input type="text" name="pseudo" placeholder="Pseudo" /> <br /> 
-						<input type="password" name="mot_de_passe" placeholder="Password" /> <br />
-						<input type="submit" id="submit" name="connexion" value="&rarr;" /> <br /> <br /> 
-						<a href="create">Create an account</a>
-						<a href="forgot">Forgotten Password</a>
+						<input type="text" name="pseudo" placeholder="Pseudo" /> <br />
+						<input type="password" name="mot_de_passe" placeholder="Password" />
+						<br /> <input type="submit" id="submit" name="connexion"
+							value="&rarr;" /> <br /> <br /> <a href="create">Create an
+							account</a> <a href="forgot">Forgotten Password</a>
 					</form>
 
 				</div>
@@ -42,7 +37,7 @@
 
 </body>
 <footer>
-<p>Version 97</p>
+	<p>Version 97</p>
 
 </footer>
 
