Les mails fonctionnent. L'oubli de mot de passe est géré

--- a/WebContent/forgot.html
+++ b/WebContent/forgot.html
@@ -9,7 +9,8 @@
 	<h1>What is your email address ?</h1>
 
 	<form class="" action="" method="post">
-		<input type="text" name="email" placeholder="" /> <br /> <a href="">Send</a>
+		<input type="text" name="email" placeholder="email" /> <br /> 
+		<input type='submit' name="send"/>
 	</form>
 
 
