--- a/WebContent/forgot.html
+++ b/WebContent/forgot.html
@@ -3,9 +3,15 @@
 <head>
 <meta charset="UTF-8">
 <title>Sopraturage</title>
+<link href="css/sopraturage.css" rel="stylesheet" type="text/css" />
+
 </head>
+
+
 <body>
 
+	<div class="page">
+	
 	<h1>What is your email address ?</h1>
 
 	<form class="" action="" method="post">
@@ -13,6 +19,7 @@
 		<input type='submit' name="send"/>
 	</form>
 
+	</div>
 
 </body>
 </html>
