--- a/WebContent/forgot.html
+++ b/WebContent/forgot.html
@@ -14,10 +14,13 @@
 	
 	<h1>What is your email address ?</h1>
 
+
+	<div class="form_create_account">
 	<form class="" action="" method="post">
 		<input type="text" name="email" placeholder="email" /> <br /> 
 		<input type='submit' name="send"/>
 	</form>
+	</div>
 
 	</div>
 
