--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -21,7 +21,7 @@
 					</div>
 					<br />
 					<form class="formulaire" action="connexion" method="post">
-						<input type="text" name="pseudo" placeholder="Pseudo" /> <br />
+						<input type="text" name="pseudo" placeholder="Email" /> <br />
 						<input type="password" name="mot_de_passe" placeholder="Password" />
 						<br /> <input type="submit" id="submit" name="connexion"
 							value="&rarr;" /> <br /> <br /> <a href="create">Create an
