--- a/WebContent/forgot.html
+++ b/WebContent/forgot.html
@@ -12,12 +12,19 @@
 
 	<div class="page">
 	
-	<h1>What is your email address ?</h1>
+	<div class="head">
+			<h1>Sopraturage</h1>
+		</div>
+		
+		<div class="titre_page">
+			<h2>Forgotten password</h2>
+		</div>
 
 
 	<div class="form_create_account">
 	<form class="" action="" method="post">
-		<input type="text" name="email" placeholder="email" /> <br /> 
+		<p>What is your email address ?</p>
+		<input type="text" name="email" placeholder="email" /> <br /><br /> 
 		<input type='submit' name="send"/>
 	</form>
 	</div>
