--- a/WebContent/testFile.html
+++ b/WebContent/testFile.html
@@ -1,16 +1,15 @@
-<!DOCTYPE html>
 <html>
 <head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<title>File Uploading Form</title>
 </head>
 <body>
-	<form action="" method="post"
+	<h3>File Upload:</h3>
+	Select a file to upload:
+	<br />
+	<form action="upload" method="post"
 		enctype="multipart/form-data">
 		<input type="file" name="file" size="50" /> <br /> <input
 			type="submit" value="Upload File" />
 	</form>
-
-
 </body>
 </html>
