--- a/WebContent/forgot.html
+++ b/WebContent/forgot.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <title>Sopraturage</title>
 <link href="css/sopraturage.css" rel="stylesheet" type="text/css" />
+<link rel="icon" href="images/auto.ico" />
 
 </head>
 
