--- a/WebContent/testFile.html
+++ b/WebContent/testFile.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <title>File Uploading Form</title>
+<link rel="icon" href="images/auto.ico" />
 </head>
 <body>
 	<h3>File Upload:</h3>
